apps/base/ci-registry/harbor-cleanup/harbor-cleanup-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harbor-cleanup
  namespace: harbor-cleanup
  labels:
    app: harbor-cleanup
spec:
  selector:
    app: harbor-cleanup
  ports:
    - name: http
      port: 80
      targetPort: 4030
